update storybook config

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" src="styles/main.scss">
-<link rel="stylesheet" src="styles/_default.scss">
-<link rel="stylesheet" src="styles/_fonts.scss">
-<link rel="stylesheet" src="styles/_mixins.scss">
-<link rel="stylesheet" src="styles/_reset.scss">
-<link rel="stylesheet" src="styles/_variables.scss">
+<script>
+  if (window.location.port !== '9001') {
+    document.write('<style>input { caret-color: transparent; }</style>');
+  }
+</script>
+<link rel="stylesheet" href="/.next/static/style.css">
